--- a/SQLAdvanced.ipynb
+++ b/SQLAdvanced.ipynb
@@ -6307,7 +6307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 74,
    "metadata": {
     "id": "Ojvf6D7Ijqu-"
    },
@@ -6327,7 +6327,7 @@
        "'Persisted titanic'"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6352,7 +6352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 75,
    "metadata": {
     "id": "PDEBNW4Ojqu-"
    },
@@ -6382,7 +6382,7 @@
        "[(31.857093153759823,)]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6408,7 +6408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 76,
    "metadata": {
     "id": "Bd8_KkqVjqu-"
    },
@@ -6418,29 +6418,13 @@
      "output_type": "stream",
      "text": [
       " * sqlite://\n",
-      "Done.\n",
-      "Done.\n"
+      "(sqlite3.OperationalError) table survivors already exists\n",
+      "[SQL: create table survivors as\n",
+      "select last, first\n",
+      "from titanic\n",
+      "where survived = 'yes';]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <tr>\n",
-       "        <th>count(*)</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>342</td>\n",
-       "    </tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[(342,)]"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -6465,7 +6449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 77,
    "metadata": {
     "id": "XGPYDkzMjqu-"
    },
@@ -6484,7 +6468,7 @@
        "[]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6506,7 +6490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 78,
    "metadata": {
     "id": "ZHJEUzTQjqu_"
    },
@@ -6565,16 +6549,6 @@
        "        <td>yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Castro</td>\n",
-       "        <td>Mr. John Eric</td>\n",
-       "        <td>M</td>\n",
-       "        <td>23.0</td>\n",
-       "        <td>1</td>\n",
-       "        <td>2521.0</td>\n",
-       "        <td>Southampton</td>\n",
-       "        <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "        <td>Villena</td>\n",
        "        <td>Mr. Kurt Matthew</td>\n",
        "        <td>M</td>\n",
@@ -6590,11 +6564,10 @@
        "[('Cardeza', 'Mr. Thomas Drake Martinez', 'M', 36.0, 1, 512.33, 'Cherbourg', 'yes'),\n",
        " ('Lesurer', 'Mr. Gustave J', 'M', 35.0, 1, 512.33, 'Cherbourg', 'yes'),\n",
        " ('Ward', 'Miss Anna', 'F', 35.0, 1, 512.33, 'Cherbourg', 'yes'),\n",
-       " ('Castro', 'Mr. John Eric', 'M', 23.0, 1, 2521.0, 'Southampton', 'yes'),\n",
        " ('Villena', 'Mr. Kurt Matthew', 'M', 22.0, 1, 512.33, 'Cherbourg', 'yes')]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
