--- a/Python/2- PythonData.ipynb
+++ b/Python/2- PythonData.ipynb
@@ -1,1 +1,349 @@
-{"cells":[{"cell_type":"markdown","metadata":{"id":"pGai0_A5oTB1"},"source":["### **Data Manipulation in Python**"]},{"cell_type":"markdown","source":["<font color=\"red\">File access required:</font> In Colab this notebook requires first uploading files **Cities.csv**, **Countries.csv**, **Players.csv**, and **Teams.csv** using the *Files* feature in the left toolbar. If running the notebook on a local computer, simply ensure these files are in the same workspace as the notebook."],"metadata":{"id":"vEqoCHtoo2fT"}},{"cell_type":"markdown","metadata":{"id":"U68rIwRroTB3"},"source":["### Reading data from CSV files using csv package"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"YJSsPQEGoTB3"},"outputs":[],"source":["# Set-up\n","import csv\n","import numpy as np"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"g4n0LOP-oTB5"},"outputs":[],"source":["# Use csv package 'DictReader' to read Cities.csv data\n","# After header, data is read row-by-row into dictionary format\n","# Note all values are read as strings\n","with open('Cities.csv') as f:\n","    rows = csv.DictReader(f)\n","    for r in rows:\n","        print(dict(r))"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"aIil57kyoTB5"},"outputs":[],"source":["# Print the city and longitude of all cities with longitude < 0\n","with open('Cities.csv') as f:\n","    rows = csv.DictReader(f)\n","    for r in rows:\n","        if float(r['longitude']) < 0:\n","            print(r['city'], r['longitude'])\n","# Show what happens without float()"]},{"cell_type":"markdown","metadata":{"id":"m0Cnk3-OoTB5"},"source":["### <font color=\"green\">**Your Turn**</font>"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"mSbdhJs4oTB5"},"outputs":[],"source":["# Using csv package 'DictReader' to read Countries.csv data,\n","# find all countries that have coastline and are not in the EU;\n","# print the countries and their populations\n","# Note: In Python, use '==' to test equality\n","YOUR CODE HERE"]},{"cell_type":"markdown","metadata":{"id":"og8SSmsRoTB6"},"source":["### Reading data into Python data structures"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"Gi0HVh3ToTB6"},"outputs":[],"source":["# Read Cities.csv data into list of dictionaries\n","cities = []\n","with open('Cities.csv') as f:\n","    rows = csv.DictReader(f)\n","    for r in rows:\n","        cities.append(dict(r))\n","cities"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"X6unZ0WHoTB6"},"outputs":[],"source":["# Read Countries.csv data into list of dictionaries\n","countries = []\n","with open('Countries.csv') as f:\n","    rows = csv.DictReader(f)\n","    for r in rows:\n","        countries.append(dict(r))\n","countries"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"G9djxF3KoTB6"},"outputs":[],"source":["# Print the city and longitude of all cities with longitude < 0\n","for city in cities:\n","    if float(city['longitude']) < 0:\n","        print(city['city'], city['longitude'])"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"y7493sZ4oTB7"},"outputs":[],"source":["# Print all cities that are not in the EU\n","# Requires joining cities and countries\n","for city in cities:\n","    for country in countries:\n","        if city['country'] == country['country'] and country['EU'] == 'no':\n","            print(city['city'], '-', city['country'])"]},{"cell_type":"markdown","metadata":{"id":"UkvJU3NXoTB7"},"source":["### Aggregation"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"RPmtwvDcoTB7"},"outputs":[],"source":["# Compute overall average city temperature\n","temps = [] # create list of all temperatures\n","for city in cities:\n","    temps.append(float(city['temperature']))\n","# print(temps)\n","print(np.average(temps))"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"Tuz92iE4oTB8"},"outputs":[],"source":["# Alternative using running sum and count\n","sum = 0\n","count = 0\n","for city in cities:\n","    sum += float(city['temperature'])\n","    count += 1\n","print(sum/count)"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"5DmVhjoIoTB8"},"outputs":[],"source":["# Compute average city temperature for each country\n","# First compute list of countries\n","countryList = []\n","for city in cities:\n","    if city['country'] not in countryList:\n","        countryList.append(city['country'])\n","# print(countryList)\n","# Then compute average temperature for each\n","for country in countryList:\n","    temps = []\n","    for city in cities:\n","        if city['country'] == country:\n","            temps.append(float(city['temperature']))\n","    print(country, np.average(temps))"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"i_WRHukVoTB8"},"outputs":[],"source":["# Compute overall minimum and maximum city temperatures\n","temps = []\n","for city in cities:\n","    temps.append(float(city['temperature']))\n","print('Minimum:', min(temps))\n","print('Maximum:', max(temps))"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"gdIlo3mcoTB8"},"outputs":[],"source":["# Alternative method using running min and max\n","minval = float(cities[0]['temperature'])\n","maxval = float(cities[0]['temperature'])\n","for city in cities[1:]:\n","    if float(city['temperature']) < minval:\n","        minval = float(city['temperature'])\n","    if float(city['temperature']) > maxval:\n","        maxval = float(city['temperature'])\n","print('Minimum:', minval)\n","print('Maximum:', maxval)"]},{"cell_type":"markdown","metadata":{"id":"U3fJz9tIoTB9"},"source":["### <font color=\"green\">**Your Turn**</font>"]},{"cell_type":"code","execution_count":null,"metadata":{"scrolled":true,"id":"GrfXOuSVoTB9"},"outputs":[],"source":["# Find the minimum, maximum, and average temperatures of\n","# cities that are in the EU, and the minimum, maximum, and average\n","# temperatures of cities that are not in the EU\n","#\n","# Hint: You will need to \"join\" cities and countries using one loop inside\n","#   another as seen in an earlier example\n","# Then create two lists of temperatures:\n","EU = [] # temperatures of EU cities\n","nonEU = [] # temperatures of non-EU cities\n","#\n","YOUR CODE TO POPULATE THE LISTS GOES HERE (can be done in 6-7 lines)\n","#\n","# Once the lists are populated, the following code prints the results\n","print('EU:    ', 'minimum', min(EU), 'maximum', max(EU), 'average', np.average(EU))\n","print('non-EU:', 'minimum', min(nonEU), 'maximum', max(nonEU), 'average', np.average(nonEU))"]}],"metadata":{"kernelspec":{"display_name":"Python 3","language":"python","name":"python3"},"language_info":{"codemirror_mode":{"name":"ipython","version":3},"file_extension":".py","mimetype":"text/x-python","name":"python","nbconvert_exporter":"python","pygments_lexer":"ipython3","version":"3.7.6"},"colab":{"provenance":[]}},"nbformat":4,"nbformat_minor":0}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "pGai0_A5oTB1"
+   },
+   "source": [
+    "### **Data Manipulation in Python**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "vEqoCHtoo2fT"
+   },
+   "source": [
+    "<font color=\"red\">File access required:</font> In Colab this notebook requires first uploading files **Cities.csv**, **Countries.csv**, **Players.csv**, and **Teams.csv** using the *Files* feature in the left toolbar. If running the notebook on a local computer, simply ensure these files are in the same workspace as the notebook."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "U68rIwRroTB3"
+   },
+   "source": [
+    "### Reading data from CSV files using csv package"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "id": "YJSsPQEGoTB3"
+   },
+   "outputs": [],
+   "source": [
+    "# Set-up\n",
+    "import csv\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "id": "g4n0LOP-oTB5"
+   },
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'Cities.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Use csv package 'DictReader' to read Cities.csv data\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# After header, data is read row-by-row into dictionary format\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# Note all values are read as strings\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mCities.csv\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m      5\u001b[39m     rows = csv.DictReader(f)\n\u001b[32m      6\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m r \u001b[38;5;129;01min\u001b[39;00m rows:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\IPython\\core\\interactiveshell.py:344\u001b[39m, in \u001b[36m_modified_open\u001b[39m\u001b[34m(file, *args, **kwargs)\u001b[39m\n\u001b[32m    337\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m}:\n\u001b[32m    338\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    339\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mIPython won\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m by default \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    340\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    341\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33myou can use builtins\u001b[39m\u001b[33m'\u001b[39m\u001b[33m open.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    342\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m344\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: 'Cities.csv'"
+     ]
+    }
+   ],
+   "source": [
+    "# Use csv package 'DictReader' to read Cities.csv data\n",
+    "# After header, data is read row-by-row into dictionary format\n",
+    "# Note all values are read as strings\n",
+    "with open('Cities.csv') as f:\n",
+    "    rows = csv.DictReader(f)\n",
+    "    for r in rows:\n",
+    "        print(dict(r))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "aIil57kyoTB5"
+   },
+   "outputs": [],
+   "source": [
+    "# Print the city and longitude of all cities with longitude < 0\n",
+    "with open('Cities.csv') as f:\n",
+    "    rows = csv.DictReader(f)\n",
+    "    for r in rows:\n",
+    "        if float(r['longitude']) < 0:\n",
+    "            print(r['city'], r['longitude'])\n",
+    "# Show what happens without float()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "m0Cnk3-OoTB5"
+   },
+   "source": [
+    "### <font color=\"green\">**Your Turn**</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "mSbdhJs4oTB5"
+   },
+   "outputs": [],
+   "source": [
+    "# Using csv package 'DictReader' to read Countries.csv data,\n",
+    "# find all countries that have coastline and are not in the EU;\n",
+    "# print the countries and their populations\n",
+    "# Note: In Python, use '==' to test equality\n",
+    "YOUR CODE HERE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "og8SSmsRoTB6"
+   },
+   "source": [
+    "### Reading data into Python data structures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "Gi0HVh3ToTB6"
+   },
+   "outputs": [],
+   "source": [
+    "# Read Cities.csv data into list of dictionaries\n",
+    "cities = []\n",
+    "with open('Cities.csv') as f:\n",
+    "    rows = csv.DictReader(f)\n",
+    "    for r in rows:\n",
+    "        cities.append(dict(r))\n",
+    "cities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "X6unZ0WHoTB6"
+   },
+   "outputs": [],
+   "source": [
+    "# Read Countries.csv data into list of dictionaries\n",
+    "countries = []\n",
+    "with open('Countries.csv') as f:\n",
+    "    rows = csv.DictReader(f)\n",
+    "    for r in rows:\n",
+    "        countries.append(dict(r))\n",
+    "countries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "G9djxF3KoTB6"
+   },
+   "outputs": [],
+   "source": [
+    "# Print the city and longitude of all cities with longitude < 0\n",
+    "for city in cities:\n",
+    "    if float(city['longitude']) < 0:\n",
+    "        print(city['city'], city['longitude'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "y7493sZ4oTB7"
+   },
+   "outputs": [],
+   "source": [
+    "# Print all cities that are not in the EU\n",
+    "# Requires joining cities and countries\n",
+    "for city in cities:\n",
+    "    for country in countries:\n",
+    "        if city['country'] == country['country'] and country['EU'] == 'no':\n",
+    "            print(city['city'], '-', city['country'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "UkvJU3NXoTB7"
+   },
+   "source": [
+    "### Aggregation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "RPmtwvDcoTB7"
+   },
+   "outputs": [],
+   "source": [
+    "# Compute overall average city temperature\n",
+    "temps = [] # create list of all temperatures\n",
+    "for city in cities:\n",
+    "    temps.append(float(city['temperature']))\n",
+    "# print(temps)\n",
+    "print(np.average(temps))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "Tuz92iE4oTB8"
+   },
+   "outputs": [],
+   "source": [
+    "# Alternative using running sum and count\n",
+    "sum = 0\n",
+    "count = 0\n",
+    "for city in cities:\n",
+    "    sum += float(city['temperature'])\n",
+    "    count += 1\n",
+    "print(sum/count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "5DmVhjoIoTB8"
+   },
+   "outputs": [],
+   "source": [
+    "# Compute average city temperature for each country\n",
+    "# First compute list of countries\n",
+    "countryList = []\n",
+    "for city in cities:\n",
+    "    if city['country'] not in countryList:\n",
+    "        countryList.append(city['country'])\n",
+    "# print(countryList)\n",
+    "# Then compute average temperature for each\n",
+    "for country in countryList:\n",
+    "    temps = []\n",
+    "    for city in cities:\n",
+    "        if city['country'] == country:\n",
+    "            temps.append(float(city['temperature']))\n",
+    "    print(country, np.average(temps))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "i_WRHukVoTB8"
+   },
+   "outputs": [],
+   "source": [
+    "# Compute overall minimum and maximum city temperatures\n",
+    "temps = []\n",
+    "for city in cities:\n",
+    "    temps.append(float(city['temperature']))\n",
+    "print('Minimum:', min(temps))\n",
+    "print('Maximum:', max(temps))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "gdIlo3mcoTB8"
+   },
+   "outputs": [],
+   "source": [
+    "# Alternative method using running min and max\n",
+    "minval = float(cities[0]['temperature'])\n",
+    "maxval = float(cities[0]['temperature'])\n",
+    "for city in cities[1:]:\n",
+    "    if float(city['temperature']) < minval:\n",
+    "        minval = float(city['temperature'])\n",
+    "    if float(city['temperature']) > maxval:\n",
+    "        maxval = float(city['temperature'])\n",
+    "print('Minimum:', minval)\n",
+    "print('Maximum:', maxval)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "U3fJz9tIoTB9"
+   },
+   "source": [
+    "### <font color=\"green\">**Your Turn**</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "GrfXOuSVoTB9",
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Find the minimum, maximum, and average temperatures of\n",
+    "# cities that are in the EU, and the minimum, maximum, and average\n",
+    "# temperatures of cities that are not in the EU\n",
+    "#\n",
+    "# Hint: You will need to \"join\" cities and countries using one loop inside\n",
+    "#   another as seen in an earlier example\n",
+    "# Then create two lists of temperatures:\n",
+    "EU = [] # temperatures of EU cities\n",
+    "nonEU = [] # temperatures of non-EU cities\n",
+    "#\n",
+    "YOUR CODE TO POPULATE THE LISTS GOES HERE (can be done in 6-7 lines)\n",
+    "#\n",
+    "# Once the lists are populated, the following code prints the results\n",
+    "print('EU:    ', 'minimum', min(EU), 'maximum', max(EU), 'average', np.average(EU))\n",
+    "print('non-EU:', 'minimum', min(nonEU), 'maximum', max(nonEU), 'average', np.average(nonEU))"
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
+}
